@@ -25,6 +25,8 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
     - correctly ignore already (un)hold packages
   * apt-pkg/cachefile.cc:
     - clean up lost atomic cachefiles with 'clean' (Closes: #650513)
+  * apt-pkg/indexrecords.cc:
+    - do not create empty Entries as a sideeffect of Lookup()
 
   [ Steve Langasek ]
   * cmdline/apt-get.cc:
@@ -47,7 +49,7 @@ apt (0.8.16~exp13) UNRELEASED; urgency=low
   * apt-pkg/contrib/fileutl.h:
     - fix compat with FileFd::OpenDescriptor() in ReadOnlyGzip mode
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 11 Feb 2012 22:34:29 +0100
+ -- David Kalnischkies <kalnischkies@gmail.com>  Sat, 18 Feb 2012 18:22:14 +0100
 
 apt (0.8.16~exp12) experimental; urgency=low
 
